# pynaneye

./: .gitattributes  .gitignore  README.md  build_pynaneye.bat  example.py  install_naneye_dlls.py  linters_and_black.bat  pyproject.toml  setup.cfg
csharp/: Camera.cs  PyNanEye.csproj  csharp_naneye.sln
src/pynaneye/: __init__.py  _version.py  frame.py  frame_queue.py  naneye.py  naneye.pyi
