requires = ["setuptools>=61.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "pynaneye"
authors = [
  { name="Christian Baker", email="christian.baker@kcl.ac.uk" },
]
dynamic = ["version"]
description = "A Python interface for the NanEye camera."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pythonnet",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]
examples = [
    "opencv-python",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pynaneye"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = 3.12
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

[[tool.mypy.overrides]]
module = "spectrum_gmbh.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "versioneer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pynaneye._version"
ignore_errors = true


